[gd_scene load_steps=6 format=3 uid="uid://explosion3d00001"]

[ext_resource type="Script" path="res://src/effects/Explosion3D.gd" id="1_script"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fire"]
emission_shape = 1
emission_sphere_radius = 0.3
direction = Vector3(0, 1, 0)
spread = 180.0
initial_velocity_min = 3.0
initial_velocity_max = 6.0
gravity = Vector3(0, -2, 0)
scale_min = 0.3
scale_max = 0.8
color = Color(1, 0.5, 0.1, 1)
color_ramp = null

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_smoke"]
emission_shape = 1
emission_sphere_radius = 0.5
direction = Vector3(0, 1, 0)
spread = 60.0
initial_velocity_min = 1.0
initial_velocity_max = 2.0
gravity = Vector3(0, 0.5, 0)
scale_min = 0.5
scale_max = 1.5
color = Color(0.3, 0.3, 0.3, 0.6)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_sparks"]
emission_shape = 1
emission_sphere_radius = 0.2
direction = Vector3(0, 1, 0)
spread = 180.0
initial_velocity_min = 5.0
initial_velocity_max = 10.0
gravity = Vector3(0, -10, 0)
scale_min = 0.05
scale_max = 0.15
color = Color(1, 0.8, 0.3, 1)

[sub_resource type="SphereMesh" id="SphereMesh_particle"]
radius = 0.1
height = 0.2

[node name="Explosion3D" type="Node3D"]
script = ExtResource("1_script")

[node name="ParticlesFire" type="GPUParticles3D" parent="."]
emitting = false
amount = 32
one_shot = true
explosiveness = 0.9
lifetime = 0.6
process_material = SubResource("ParticleProcessMaterial_fire")
draw_pass_1 = SubResource("SphereMesh_particle")

[node name="ParticlesSmoke" type="GPUParticles3D" parent="."]
emitting = false
amount = 16
one_shot = true
explosiveness = 0.5
lifetime = 1.2
process_material = SubResource("ParticleProcessMaterial_smoke")
draw_pass_1 = SubResource("SphereMesh_particle")

[node name="ParticlesSparks" type="GPUParticles3D" parent="."]
emitting = false
amount = 24
one_shot = true
explosiveness = 1.0
lifetime = 0.8
process_material = SubResource("ParticleProcessMaterial_sparks")
draw_pass_1 = SubResource("SphereMesh_particle")

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_color = Color(1, 0.6, 0.2, 1)
light_energy = 3.0
omni_range = 5.0
omni_attenuation = 2.0

[node name="AudioPlayer" type="AudioStreamPlayer3D" parent="."]
